--- a/NeLogos/NeLogos.vcxproj
+++ b/NeLogos/NeLogos.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="NeLogos.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="NeLogos.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
